<resources>
    <string name="app_name">iSpend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shekel_hint">₪</string>
    <string name="new_expense">הוצאה חדשה</string>
    <string name="cash_radio">מזומן</string>
    <string name="credit_radio">אשראי</string>
    <string name="category_hint">קטגוריה</string>
    <string name="category">קטגוריה</string>
    <string name="sub_category">תת-קטגוריה</string>
    <string name="amount">סכום</string>
    <string name="cancel_btn">בטל</string>
    <string name="save_btn">שמור</string>
    <string name="shekel_symbol">₪</string>

    <string name="food_normal_category">סופרמרקט - מזון</string>
    <string name="food_junk_category">אוכל בחוץ/שתייה</string>
    <string name="fuel_category">דלק</string>
    <string name="transportation_category">תחבורה ציבורית</string>
    <string name="rent_category">שכר דירה</string>
    <string name="shopping_may_category">קניות - מאי</string>
    <string name="shopping_clean_category">קניות - מוצרי ניקיון</string>
    <string name="shopping_other_category">קניות - אחר</string>
    <string name="shopping_clothing_category">קניות - בגדים</string>
    <string name="car_maintenance_category">תחזוקת רכב</string>
    <string name="animal_category">חיות מחמד</string>
    <string name="parking_category">חנייה</string>
    <string name="events_category">אירועים</string>
    <string name="game_category">גיים</string>


    <string name="search">חפש</string>
    <string name="nothing_to_show">אין מה להציג, נא לחפש תאריך אחר.</string>
    <string name="daily_drawer">תיעוד יומי</string>
    <string name="reports_drawer">דוחות</string>
    <string name="make_report">צור דוח</string>
    <string name="choose_month">בחר חודש</string>
    <string name="backup_database">Backup Database</string>
    <string name="ispend_title">iSpend</string>
</resources>