<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="48dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/new_expense"
        android:textColor="@color/purple_500"
        android:textSize="22sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
      android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_700"/>
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>
    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_selector"
        android:cursorVisible="true"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:hint="תיאור"
        android:inputType="textMultiLine"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/purple_200"
        android:textCursorDrawable="@color/black"
        android:textSize="22sp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:autofillHints=""
        android:id="@+id/amount_edittext"
        android:background="@drawable/edittext_selector"
        android:cursorVisible="true"
        android:drawableStart="@drawable/shekel_icon"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="number"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/purple_200"
        android:textCursorDrawable="@color/black"
        android:textSize="22sp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        android:id="@+id/text_input_layout"
        android:layoutDirection="rtl"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/purple_500"
        app:hintTextColor="@color/black">


        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:layoutDirection="rtl"
          />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal" >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/varela_round"
            android:padding="16dp"
            android:text="@string/cancel_btn"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:shadowColor="@color/black"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/varela_round"
            android:padding="16dp"
            android:text="@string/save_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>